force-app/main/default/objects/fw2__Kit_Item__c/fw2__Kit_Item__c.object-meta.xml
<CustomObject>
    <label>Kit Item</label>
    <nameField>
        <label>Kit Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kit Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>