force-app/main/default/objects/fw2__Kit_Item__c/fields/fw2__Product__c.field-meta.xml
<CustomField>
    <fullName>fw2__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Kit Items</relationshipLabel>
    <relationshipName>Kit_Items</relationshipName>
    <type>Lookup</type>
</CustomField>