force-app/main/default/objects/fw2__Kit_Item__c/fields/fw2__Product_Kit__c.field-meta.xml
<CustomField>
    <fullName>fw2__Product_Kit__c</fullName>
    <label>Product Kit</label>
    <referenceTo>fw2__Product_Kit__c</referenceTo>
    <relationshipLabel>Kit Items</relationshipLabel>
    <relationshipName>Kit_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>