force-app/main/default/objects/fw2__Kit_Item__c/fields/fw2__Quantity__c.field-meta.xml
<CustomField>
    <fullName>fw2__Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>